--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@nextui-org/react": "^2.2.9",
     "autoprefixer": "^10.0.1",
-    "bootstrap": "^5.3.3",
+    "daisyui": "^4.7.2",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
