--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.2.9",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.7.2",
